--- a/packages/stylelint-plugin-store-vtex/package.json
+++ b/packages/stylelint-plugin-store-vtex/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "@ganobrega/stylelint-plugin-store-vtex",
-  "version": "0.0.0-alpha.0",
+  "name": "stylelint-plugin-store-vtex",
+  "version": "0.0.1",
   "scripts": {
-    "build": "node build.js"
+    "build": "node build.js",
+    "test": "jest rules/**/*.test.js"
   },
   "dependencies": {
     "axios": "^0.25.0",
     "fs-extra": "^10.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pkg-up": "^4.0.0",
+    "postcss-selector-parser": "^6.0.9",
+    "stylelint": "^14.2.0"
   },
   "peerDependencies": {
     "stylelint": ">=7.0.0 <15.0.0"
@@ -17,9 +21,6 @@
     "jest-preset-stylelint": "4.2.0"
   },
   "jest": {
-    "preset": "jest-preset-stylelint",
-    "setupFiles": [
-      "./jest.setup.js"
-    ]
+    "preset": "jest-preset-stylelint"
   }
 }
