--- a/.github/workflows/contributors.yml
+++ b/.github/workflows/contributors.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           CONTRIBUTOR: "### Contributors"
           COLUMN_PER_ROW: "6"
-          ACCESS_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          ACCESS_TOKEN: ${{secrets.MY_GITHUB_TOKEN}}
           IMG_WIDTH: "100"
           FONT_SIZE: "14"
           PATH: "/README.md"
