--- a/packages/stylelint-plugin-store-vtex/package.json
+++ b/packages/stylelint-plugin-store-vtex/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.21",
     "pkg-up": "^4.0.0",
     "postcss-selector-parser": "^6.0.9",
+    "semver": "^7.3.5",
     "stylelint": "^14.2.0"
   },
   "peerDependencies": {
